<resources>
    <string name="app_name">GitHubApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="font_address">fonts/sansserif.ttf</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="username">username</string>
    <string name="repositories">Repositories</string>
    <string name="events">Events</string>
    <string name="repository">Repository</string>
    <string name="starred">starred</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="no_favorite_user_yet">No favorite user yet!</string>
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="logout_title">Logout!</string>
    <string name="msg_dialog_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_all_title">Remove all!</string>
    <string name="msg_dialog_remove_all">Are you sure you want to remove saved users?</string>
    <string name="no_repository_yet">You don\'t have any repository yet!</string>
    <string name="no_starred_yet">No starred repository yet!</string>
    <string name="no_followers_yet">You don\'t have followers yet!</string>
    <string name="no_following_yet">You don\'t have following yet!</string>

</resources>