<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackLight"
    android:orientation="vertical"
    tools:context=".ui.fragment.OverviewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatarOverview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/global_margin2X" />

        <TextView
            android:id="@+id/textUserNameOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/global_margin2X"
            android:text="sdada"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/global_padding2X">


        <TextView
            android:id="@+id/titleRepository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin4X"
            android:layout_weight="1"
            android:background="@drawable/bg_overview_titles"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:text="@string/repository"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/titleFollowers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin4X"
            android:layout_weight="1"
            android:background="@drawable/bg_overview_titles"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:text="@string/followers"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/titleFollowing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin4X"
            android:layout_weight="1"
            android:background="@drawable/bg_overview_titles"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:text="@string/following"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/global_padding">

        <TextView
            android:id="@+id/textRepositoryOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin4X"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:text="45"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textFollowersOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin4X"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:text="253"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/textFollowingOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin4X"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:text="659"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>