<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.fragment.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatarOverview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/global_margin6X" />

        <TextView
            android:id="@+id/textUserNameOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/global_margin2X"
            android:layout_weight="1"
            android:text="sdada"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".2"
            android:padding="@dimen/global_padding2X"
            android:src="@drawable/ic_logout"
            app:tint="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textRepositoryOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin3X"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:text="45"
            android:textSize="18sp"
            android:textColor="@color/white"
              />

        <TextView
            android:id="@+id/textFollowersOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin3X"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"

            android:text="253"
            android:textSize="18sp"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/textFollowingOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin3X"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:text="659"
            android:textSize="18sp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/global_padding">


        <TextView
            android:id="@+id/titleRepository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin3X"
            android:layout_weight="1"
            android:background="@drawable/bg_overview_titles"
            android:gravity="center"
            android:textSize="14sp"
            android:padding="@dimen/global_padding2X"
            android:text="@string/repository"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/titleFollowers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin3X"
            android:layout_weight="1"
            android:background="@drawable/bg_overview_titles"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:textSize="14sp"
            android:text="@string/followers"
            android:textColor="@color/gray" />


        <TextView
            android:id="@+id/titleFollowing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin3X"
            android:layout_weight="1"
            android:background="@drawable/bg_overview_titles"
            android:gravity="center"
            android:padding="@dimen/global_padding2X"
            android:textSize="14sp"
            android:text="@string/following"
            android:textColor="@color/gray" />


    </LinearLayout>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:tabSelectedTextColor="@color/colorPrimaryLight"
        app:tabTextColor="@color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerOverview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>